--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "flowbite-react": "0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-table": "7.8.0"
+    "react-table": "7.8.0",
+    "socket.io-client": "4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
